test/fail/basic_syntax/multi_char_byte_literal.lly
#[
SyntaxError: Multi-character byte literal.
    from multi_char_byte_literal.lly:6:
]#

var v = '12'
